Fixed logo inline spacing, max-min width issues, and bg repeat issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .logo {
     display: block;
-    width: 90%;
+    width: 80%;
     max-width: 500px;
     height: auto;
     margin-left: auto;
