--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,8 +39,10 @@ html {
 }
 
 body {
+    position: relative;
     min-height: 100%;
-    background: url("https://source.unsplash.com/1920x1080/?monument,india");
+    background: url("https://source.unsplash.com/1920x1080/?monument,india")
+        no-repeat;
 }
 body::after {
     content: "";
@@ -49,7 +51,7 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
     z-index: -1;
 }
 
@@ -62,6 +64,7 @@ button {
 }
 
 .gcse {
+    width: 95%;
     max-width: 750px;
     margin-inline: auto;
     color: #fff;
@@ -72,8 +75,6 @@ button {
     align-items: center;
     justify-content: center;
     background: rgba(255, 255, 255, 0.15);
-    /* border: 1px solid #ccc; */
-    /* border-radius: 2px; */
     width: 100%;
     height: 50px;
     margin: 0 0 2% 0;
@@ -115,13 +116,16 @@ input.gsc-input {
 .gsc-control-cse {
     background-color: transparent !important;
     border: none !important;
+    padding-left: 0.25rem !important;
+    padding-right: 0.25rem !important;
 }
 
 .gsc-results-wrapper-visible {
-    background-color: hsla(0, 0%, 100%, 0.45) !important;
-    backdrop-filter: blur(20px);
+    background-color: hsla(0, 0%, 100%, 0.6) !important;
+    backdrop-filter: blur(10px);
     box-shadow: 0 0 60px rgba(0, 0, 0, 0.15);
     max-height: 50vh;
+    min-height: 450px;
     border-radius: 2px;
     overflow-y: auto;
     border-radius: 8px;
@@ -180,6 +184,7 @@ input.gsc-input {
 .gsc-above-wrapper-area {
     border: none !important;
 }
+
 .gsc-webResult.gsc-result {
     background: transparent !important;
     border: none !important;
